fix index.html text overlapping on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,9 +109,9 @@ img {
   flex-direction: column;
   background-color: rgb(255, 240, 240);
   border: 2px dotted rgb(226, 191, 191);
-  height: 50px;
   padding: 15px;
   border-radius: 15px;
+  text-align: center;
   align-items: center;
 }
 
